--- a/src/views/index.html
+++ b/src/views/index.html
@@ -28,7 +28,7 @@
     "
   >
     <main>
-      <h1>Proxy Server</h1>
+      <h1>WOKRING CORS</h1>
       <h2>Server Interface</h2>
     </main>
   </body>
